--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "importHelpers": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
+    "rootDir": "./src", //仅用来控制输出的目录结构--outDir。
+    "outDir": "./build", //重定向输出目录。
     "esModuleInterop": true,
+    "declaration": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
